[WPF] Liste jeux OK

--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -4,9 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
+        xmlns:views="clr-namespace:Desktop.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <!-- Définition du gridLayout -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50px"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <DockPanel Background="DarkGoldenrod">
+            <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="26" Foreground="White">PreciousGames</Label>
+        </DockPanel>
+        <views:GameList Grid.Row="1" DataContext="{Binding GameListViewModel}"></views:GameList>
     </Grid>
 </Window>
