--- a/Desktop/Views/GameKind.xaml
+++ b/Desktop/Views/GameKind.xaml
@@ -9,7 +9,6 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"></RowDefinition>
-            <RowDefinition></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
             <!--<RowDefinition></RowDefinition>-->
         </Grid.RowDefinitions>
@@ -23,6 +22,7 @@
         <Label Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">Kind</Label>
         <ComboBox Grid.Column="0"  Grid.Row="1"  Background="AliceBlue" FontWeight="Bold">
             <ComboBoxItem>ComboBox Item #1</ComboBoxItem>
+            <ComboBoxItem>ComboBox Item #2</ComboBoxItem>
         </ComboBox>
 
 
