--- a/Desktop/Views/GameDetails.xaml
+++ b/Desktop/Views/GameDetails.xaml
@@ -3,40 +3,43 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Desktop.Views"
+             xmlns:local="clr-namespace:Desktop.Views" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GameDetailsViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="400">
+             d:DesignHeight="220" d:DesignWidth="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
-            <!--<RowDefinition></RowDefinition>-->
+            <RowDefinition Height="35"></RowDefinition>
+            <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">GameName</Label>
-        
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="1" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">Description</TextBlock>
+        <Label Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">Nom</Label>
+        <TextBox Grid.Column="1"  Grid.Row="0" HorizontalAlignment="Stretch" FontWeight="Bold" Text="{Binding Name}"></TextBox>
 
-        <Label Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">Release date :</Label>
-        <DatePicker Grid.Column="1"  Grid.Row="2" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold"></DatePicker>
-        
-        
-        
-        <!--<StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Orientation="Vertical">
-            <Label>Code du produit</Label>
-            <TextBox Text="{Binding Code}"></TextBox>
-            <Label>Nom du produit</Label>
-            <TextBox Text="{Binding Nom}"></TextBox>
-        </StackPanel>
+        <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" Background="AliceBlue" Text="{Binding Description}" FontWeight="Bold">
+            Description
+        </TextBlock>
+        <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" FontWeight="Bold" Text="{Binding Description}"></TextBox>
 
-        <Label Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">DERNIERES OPERATIONS</Label>
-        <Button Grid.Column="3" Margin="5" Grid.Row="2" FontSize="12px" Command="{Binding AddOperation}">+</Button>-->
+        <Label Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">Date de sortie :</Label>
+        <DatePicker
+            Grid.Column="1"
+            Grid.Row="2"
+            HorizontalAlignment="Stretch"
+            Background="AliceBlue"
+            SelectedDate="{Binding ReleaseDate}"
+            FontWeight="Bold"
+        >
 
+        </DatePicker>
+        
+        <local:GameEditor Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Editor}"></local:GameEditor>
+        <local:GameKind Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Kind}"></local:GameKind>
     </Grid>
 </UserControl>
