--- a/Desktop/Views/GameEditor.xaml
+++ b/Desktop/Views/GameEditor.xaml
@@ -3,8 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Desktop.Views"
+             xmlns:local="clr-namespace:Desktop.Views" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GameEditorViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <TextBox Text="{Binding Name}"></TextBox>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        
+        <Label Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalAlignment="Stretch" Background="AliceBlue" FontWeight="Bold">Éditeur</Label>
+        <ComboBox 
+            Grid.Column="1"
+            Grid.Row="0"
+            Background="AliceBlue"
+            FontWeight="Bold"
+            SelectedItem="{Binding SelectedEditor}"
+            ItemsSource="{Binding Editors}"
+        >
+
+        </ComboBox>
+    </Grid>
 </UserControl>
