--- a/Desktop/Views/GameDetails.xaml
+++ b/Desktop/Views/GameDetails.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Desktop.Views" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GameDetailsViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"></RowDefinition>
@@ -15,11 +15,11 @@
             <RowDefinition Height="35"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
-            <!--<RowDefinition Height="35"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
-            <RowDefinition Height="35"></RowDefinition>-->
+            <RowDefinition Height="35"></RowDefinition>
+            <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -53,7 +53,7 @@
 
         <Button Content="Annuler" Grid.Row="5" Grid.Column="0" Command="{Binding Cancel}"></Button>
         <Button Content="Valider"  Grid.Row="5" Grid.Column="1" Command="{Binding Save}"></Button>
-        <!--<TabControl>
+        <TabControl>
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
@@ -73,6 +73,6 @@
                     </ListView>
                 </StackPanel>
             </TabItem>
-        </TabControl>-->
+        </TabControl>
     </Grid>
 </UserControl>
