--- a/Desktop/AddGameWindow.xaml
+++ b/Desktop/AddGameWindow.xaml
@@ -3,10 +3,46 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Desktop"
+        xmlns:local="clr-namespace:Desktop" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:AddGameViewModel}"
+        xmlns:views="clr-namespace:Desktop.Views"
         mc:Ignorable="d"
         Title="New Game" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label Grid.Column="0" Grid.Row="0">Nom</Label>
+        <Label Grid.Column="0" Grid.Row="1">Description</Label>
+        <Label Grid.Column="0" Grid.Row="2">Date de sortie</Label>
+        <Label Grid.Column="0" Grid.Row="3">Editeur</Label>
+        <Label Grid.Column="0" Grid.Row="4">Genre</Label>
+
+        <TextBox Grid.Column="1"  Grid.Row="0" HorizontalAlignment="Stretch" FontWeight="Bold" Text="{Binding Name}" ></TextBox>
+        <TextBox Grid.Column="1"  Grid.Row="1" HorizontalAlignment="Stretch" FontWeight="Bold" Text="{Binding Description}"></TextBox>
+        <DatePicker
+            Grid.Column="1"
+            Grid.Row="2"
+            HorizontalAlignment="Stretch"
+            Background="AliceBlue"
+            SelectedDate="{Binding ReleaseDate}"
+            FontWeight="Bold"
+        >
+
+        </DatePicker>
+        <views:GameEditor Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Editor}"></views:GameEditor>
+        <views:GameEditor Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Kind}"></views:GameEditor>
         
+
+        <Button Content="Ajouter"  Grid.Row="4" Grid.Column="2" Command="{Binding Add}"></Button>
     </Grid>
 </Window>
