--- a/Web/Views/Editor/Details.cshtml
+++ b/Web/Views/Editor/Details.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Web.Models.EditorModels;
-@model DetailModel
+@model EditorViewModel
 
 @{
     ViewBag.Title = "title";
 }
 
-<h2>title</h2>
+<h2>Détail de l'éditeur @Model.Name</h2>
+
+
