--- a/Web/Views/Editor/Index.cshtml
+++ b/Web/Views/Editor/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PreciousGames.Verot.Morin.ModelLayer.Entities
 @using Web.Models.EditorModels
-@model IndexModel
+@model IndexViewModel
 
 @{
     ViewBag.Title = "View";
