--- a/Web/Views/Editor/Index.cshtml
+++ b/Web/Views/Editor/Index.cshtml
@@ -19,7 +19,7 @@
         <th></th>
     </tr>
 
-@foreach (Editor editor in Model.Editors) {
+@foreach (EditorViewModel editor in Model.Editors) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => editor.Name)
