--- a/Web/Views/Editor/Details.cshtml
+++ b/Web/Views/Editor/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using Web.Models.EditorModels;
-@model EditorViewModel
+﻿@model VerotMorin.PreciousGames.Web.Models.EditorModels.EditorViewModel
 
 @{
     ViewBag.Title = "title";
