--- a/Web/Views/Editor/Index.cshtml
+++ b/Web/Views/Editor/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PreciousGames.Verot.Morin.ModelLayer.Entities
-@using Web.Models.EditorModels
+﻿@using VerotMorin.PreciousGames.Web.Models.EditorModels
 @model IndexViewModel
 
 @{
