--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Desktop.MainWindow"
+﻿<Window x:Class="VerotMorin.PreciousGames.Desktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:Desktop.Views"
+        xmlns:views="clr-namespace:VerotMorin.PreciousGames.Desktop.Views"
         mc:Ignorable="d"
         Title="Precious Games" Height="450" Width="800">
     <DockPanel LastChildFill="True">
