--- a/Desktop/Views/GameDetails.xaml
+++ b/Desktop/Views/GameDetails.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl x:Class="Desktop.Views.GameDetails"
+﻿<UserControl x:Class="VerotMorin.PreciousGames.Desktop.Views.GameDetails"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Desktop.Views" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GameDetailsViewModel}"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModels="clr-namespace:VerotMorin.PreciousGames.Desktop.ViewModels"
+             xmlns:views="clr-namespace:VerotMorin.PreciousGames.Desktop.Views"
+             d:DataContext="{d:DesignInstance Type=viewModels:GameDetailsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -48,8 +50,8 @@
 
         </DatePicker>
         
-        <local:GameEditor Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Editor}"></local:GameEditor>
-        <local:GameKind Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Kind}"></local:GameKind>
+        <views:GameEditor Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Editor}"></views:GameEditor>
+        <views:GameKind Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0" DataContext="{Binding Kind}"></views:GameKind>
 
         <Button Content="Annuler" Grid.Row="5" Grid.Column="0" Command="{Binding Cancel}"></Button>
         <Button Content="Valider"  Grid.Row="5" Grid.Column="1" Command="{Binding Save}"></Button>
