--- a/Desktop/Views/GameEditor.xaml
+++ b/Desktop/Views/GameEditor.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="Desktop.Views.GameEditor"
+﻿<UserControl x:Class="VerotMorin.PreciousGames.Desktop.Views.GameEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Desktop.Views" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GameEditorViewModel}"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModels="clr-namespace:VerotMorin.PreciousGames.Desktop.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewModels:GameEditorViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
