--- a/Desktop/Views/GameList.xaml
+++ b/Desktop/Views/GameList.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl x:Class="Desktop.Views.GameList"
+﻿<UserControl x:Class="VerotMorin.PreciousGames.Desktop.Views.GameList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:views="clr-namespace:Desktop.Views" xmlns:viewmodels="clr-namespace:Desktop.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:GameListViewModel}"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModels="clr-namespace:VerotMorin.PreciousGames.Desktop.ViewModels"
+             xmlns:views1="clr-namespace:VerotMorin.PreciousGames.Desktop.Views"
+             d:DataContext="{d:DesignInstance Type=viewModels:GameListViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="1250">
     <Grid>
@@ -29,7 +31,7 @@
             </ListView.View>
         </ListView>
 
-        <views:GameDetails Grid.Column="2" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="2" DataContext="{Binding SelectedGame}"></views:GameDetails>
+        <views1:GameDetails Grid.Column="2" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="2" DataContext="{Binding SelectedGame}"></views1:GameDetails>
         <Button  Grid.Column="2" Grid.Row="3" Width="150px" Height="100" Command="{Binding AddNewGameCommande}" >AddGame</Button>
     </Grid>
 </UserControl>
