--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:VerotMorin.PreciousGames.Desktop.Views"
+        xmlns:viewModels="clr-namespace:VerotMorin.PreciousGames.Desktop.ViewModels"
+        d:DataContext="{d:DesignInstance Type=viewModels:HomeViewModel}"
         mc:Ignorable="d"
         Title="Precious Games" Height="450" Width="800">
     <DockPanel LastChildFill="True">
