--- a/Desktop/Views/GameList.xaml
+++ b/Desktop/Views/GameList.xaml
@@ -11,17 +11,14 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <ListView Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="5px" ItemsSource="{Binding Games, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedGame, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
+        <ListView Grid.Column="0" Grid.Row="0" Margin="5px" ItemsSource="{Binding Games, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedGame, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="100px" Header="Nom" DisplayMemberBinding="{Binding Name}" />
@@ -31,7 +28,8 @@
             </ListView.View>
         </ListView>
 
-        <views1:GameDetails Grid.Column="2" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="2" DataContext="{Binding SelectedGame}"></views1:GameDetails>
-        <Button  Grid.Column="2" Grid.Row="3" Width="150px" Height="100" Command="{Binding AddNewGameCommande}" >AddGame</Button>
+        <Button Grid.Column="0" Grid.Row="1" Command="{Binding AddNewGameCommand}" >Ajouter un jeu</Button>
+
+        <views1:GameDetails Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" DataContext="{Binding SelectedGame}"></views1:GameDetails>
     </Grid>
 </UserControl>
