--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -9,46 +9,58 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container">
-            <div class="navbar-brand">
-                @Html.ActionLink("Precious Games", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+                <div class="navbar-brand">
+                    @Html.ActionLink("Precious Games", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            @Html.ActionLink("Accueil", "Index", "Home", null, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("Genres", "Index", "Kind", null, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("Éditeurs", "Index", "Editor", null, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("Jeux", "Index", "Game", null, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("Expériences", "Index", "Experience", null, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("Évaluations", "Index", "Evaluation", null, new { @class = "nav-link" })
+                        </li>
+                        @*<li class="nav-item">
+                                @Html.ActionLink("À propos de", "About", "Home", null, new {@class = "nav-link"})
+                            </li>
+                            <li class="nav-item">
+                                @Html.ActionLink("Contact", "Contact", "Home", null, new {@class = "nav-link"})
+                            </li>*@
+                    </ul>
+                </div>
             </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        @Html.ActionLink("Accueil", "Index", "Home", null, new { @class = "nav-link" })
-                    </li>
-                    <li class="nav-item">
-                        @Html.ActionLink("Éditeurs", "Index", "Editor", null, new { @class = "nav-link" })
-                    </li>
-                    @*<li class="nav-item">
-                        @Html.ActionLink("À propos de", "About", "Home", null, new {@class = "nav-link"})
-                    </li>
-                    <li class="nav-item">
-                        @Html.ActionLink("Contact", "Contact", "Home", null, new {@class = "nav-link"})
-                    </li>*@
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
-<main class="my-4 container">
-    @RenderBody()
-</main>
+    <main class="my-4 container">
+        @RenderBody()
+    </main>
 
-<footer class="container">
-    <hr/>
-    <p>&copy; @DateTime.Now.Year - Precious Games</p>
-</footer>
+    <footer class="container">
+        <hr />
+        <p>&copy; @DateTime.Now.Year - Precious Games</p>
+    </footer>
 
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-@RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
