--- a/Web/Views/Game/Edit.cshtml
+++ b/Web/Views/Game/Edit.cshtml
@@ -1,33 +1,66 @@
-﻿@using VerotMorin.PreciousGames.Web.Models.KindModels
-@model KindViewModel
+﻿@using VerotMorin.PreciousGames.Web.Models.GameModels
+@model GameEditionViewModel
 
 @{
-    ViewBag.Title = $"Éditer {Model.Name}";
+    ViewBag.Title = "Édition jeu";
 }
 
-<h2>Éditer @Model.Name</h2>
+<h2>Éditer un jeu</h2>
 
 
 @using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-
     <div class="form-horizontal">
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.Game.Id)
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group my-2">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Game.EditorId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Game.EditorId, Model.Editors, null, new { @class = "form-select" })
+            </div>
+        </div>
+
+        <div class="form-group my-2">
+            @Html.LabelFor(model => model.Game.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Game.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Game.Name, "", new { @class = "text-danger" })
+            </div>
+
+        </div>
+
+        <div class="form-group my-2">
+            @Html.LabelFor(model => model.Game.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Game.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Game.Description, "", new { @class = "text-danger" })
+            </div>
+
+        </div>
+
+        <div class="form-group my-2">
+            @Html.LabelFor(model => model.Game.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Game.ReleaseDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Game.ReleaseDate, "", new { @class = "text-danger" })
+            </div>
+
+        </div>
+
+        <div class="form-group my-2">
+            @Html.LabelFor(model => model.Game.KindId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Game.KindId, Model.Kinds, null, new { @class = "form-select" })
             </div>
         </div>
 
         <div class="form-group my-2">
             <div class="col-md-offset-2 col-md-10">
                 @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
-                <input type="submit" value="Mettre à jour" class="btn btn-default" />
+                <input type="submit" value="Créer" class="btn btn-default" />
             </div>
         </div>
     </div>
