--- a/Web/Views/Game/Index.cshtml
+++ b/Web/Views/Game/Index.cshtml
@@ -14,7 +14,7 @@
     {
         @Html.LabelFor(model => model.SearchString, new { @class = "form-label" })
         @Html.TextBoxFor(model => model.SearchString, new { @class = "form-control" })
-        <input class="btn btn-primary" type="submit" value="Mettre à jour" />
+        <input class="btn btn-primary" type="submit" value="Rechercher" />
     }
 </div>
 
@@ -38,7 +38,7 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model.Games)
+    @foreach (GameViewModelFull item in Model.Games)
     {
         <tr>
             <td>
@@ -57,9 +57,9 @@
                 @Html.DisplayFor(modelItem => item.Editor.Id)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
