--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using VerotMorin.PreciousGames.Web.Models.HomeModels
+@model IndexViewModel
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -8,24 +11,115 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
+<div class="jumbotron">
+    <h1>ASP.NET</h1>
+    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
+
+
+
+<table>
+
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.ReleaseDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Kind)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Editor)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model.GamesTopRated)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReleaseDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Kind.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Editor.Id)
+            </td>
+            @*<td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>*@
+        </tr>
+    }
+</table>
+
+
+<table>
+    <br />
+    <br />
+    <br />
+   
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.ReleaseDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Kind)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Editor)
+        </th>
+        <th></th>
+    </tr>
+
+
+    @foreach (var item in Model.GamesBestEvaluation)
+    {
+
+
+
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReleaseDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Kind.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Editor.Id)
+            </td>
+            @*<td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>*@
+        </tr>
+    }
+</table>
