Routes + pages évaluation

--- a/Web/Views/Evaluation/Index.cshtml
+++ b/Web/Views/Evaluation/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Évaluations";
 }
 
-<h2>View</h2>
+<h2>Évaluations</h2>
 
 <p>
     @Html.ActionLink("Ajouter une évaluation", "Create")
