--- a/Web/Views/Editor/Edit.cshtml
+++ b/Web/Views/Editor/Edit.cshtml
@@ -1,24 +1,41 @@
-﻿@using VerotMorin.PreciousGames.Web.Models.EditorModels
-@model EditorViewModel
+﻿@model VerotMorin.PreciousGames.Web.Models.EditorModels.EditorViewModel
 
 @{
-    ViewBag.Title = $"Édition de {Model.Name}";
+    ViewBag.Title = "Édition éditeur";
 }
 
 <h2>Édition de @Model.Name</h2>
 
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(model => model.Id)
+    
+    <div class="form-horizontal">
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
 
-    <div class="my-2">
-        @Html.LabelFor(model => model.Name, new { @class = "form-label" })
-        @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.Name)
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    <div class="text-end">
-        <input class="btn btn-primary" type="submit" value="Mettre à jour" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Sauvegarder" class="btn btn-default" />
+            </div>
+        </div>
     </div>
+}
+
+<div>
+    @Html.ActionLink("Retour", "Index")
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
