--- a/Web/Views/Evaluation/Edit.cshtml
+++ b/Web/Views/Evaluation/Edit.cshtml
@@ -1,34 +1,35 @@
-﻿@using VerotMorin.PreciousGames.Web.Models.EvaluationModels
-@model EvaluationViewModel
+﻿@model VerotMorin.PreciousGames.Web.Models.EvaluationModels.EvaluationViewModel
 
 @{
-    ViewBag.Title = "Nouvelle évaluation";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Nouvelle évaluation</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EvaluationViewModel</h4>
+        <h4>Évaluation de @Model.Game.Name par @Model.EvaluatorName :</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.EvaluatorName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EvaluatorName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EvaluatorName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", type = "date" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EvaluatorName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.EvaluatorName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EvaluatorName, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -42,7 +43,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Créer" class="btn btn-default" />
+                <input type="submit" value="Sauvegarder" class="btn btn-default" />
             </div>
         </div>
     </div>
