--- a/Web/Views/Game/Details.cshtml
+++ b/Web/Views/Game/Details.cshtml
@@ -1,8 +1,8 @@
-﻿@using VerotMorin.PreciousGames.Web.Models.KindModels
-@model KindViewModel
+﻿@using VerotMorin.PreciousGames.Web.Models.GameModels
+@model GameViewModel
 
 @{
-    ViewBag.Title = Model.Name;
+    ViewBag.Title = "Détails";
 }
 
 <h2>Détails de @Model.Name</h2>
@@ -17,9 +17,43 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ReleaseDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReleaseDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.KindId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.KindId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EditorId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EditorId)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Éditer", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Retour", "Index")
+    @Html.ActionLink("Évaluations", "Index", "Evaluation", new { gameId = Model.Id, }, null) |
+    @Html.ActionLink("Expériences", "Index", "Experience", new { gameId = Model.Id, }, null) |
+    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
+    @Html.ActionLink("Back to List", "Index")
 </p>
