--- a/Web/Views/Game/Edit.cshtml
+++ b/Web/Views/Game/Edit.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Game.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Game.ReleaseDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Game.ReleaseDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
                 @Html.ValidationMessageFor(model => model.Game.ReleaseDate, "", new { @class = "text-danger" })
             </div>
 
