--- a/Web/Views/Game/Index.cshtml
+++ b/Web/Views/Game/Index.cshtml
@@ -57,9 +57,11 @@
                 @Html.DisplayFor(modelItem => item.Editor.Id)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Évaluations", "Index", "Evaluation", new { gameId = item.Id, }, null) |
+                @Html.ActionLink("Expériences", "Index", "Experience", new { gameId = item.Id, }, null) |
+                @Html.ActionLink("Éditer", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Détails", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Supprimer", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
